# VantisOffice

./: .commitlintrc.json  .editorconfig  .eslintrc.json  .gitignore  .gitleaks.toml  .releaserc.json  BENCHMARKS_COMPLETE.md  BENCHMARKS_REPORT.md  BENCHMARKS_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  README_ENHANCED.md  SECURITY.md  TRANSLATION_STATS.md  crates.js  deny.toml  help.html  index.html  libreoffice_analysis.md  package-lock.json  package.json  settings.html  src-files.js  todo.md  translation-coverage-report.json
pillar-01-iron/flux-vector-engine/: Cargo.toml  README.md
pillar-01-iron/flux-vector-engine/benches/: flux_benchmark.rs
pillar-01-iron/flux-vector-engine/src/: lib.rs  main.rs
pillar-01-iron/flux-vector-engine/src/core/: config.rs  error.rs  mod.rs
pillar-01-iron/flux-vector-engine/src/graphics/: fonts.rs  mod.rs  shaders.rs  textures.rs  vector_engine.rs
pillar-01-iron/flux-vector-engine/src/platform/: backend_type.rs  egl_backend.rs  metal_backend.rs  mod.rs  vulkan_backend.rs
pillar-01-iron/flux-vector-engine/src/ui/: animation.rs  component.rs  mod.rs  widgets.rs
pillar-01-iron/flux-vector-engine/tests/: flux_engine_test.rs
pillar-01-iron/vantis-core-io/: Cargo.toml  README.md
pillar-01-iron/vantis-core-io/benches/: core_benchmark.rs
pillar-01-iron/vantis-core-io/src/: lib.rs
pillar-01-iron/vantis-core-io/src/core/: allocator.rs  memory.rs  mod.rs  syscalls.rs
pillar-01-iron/vantis-core-io/src/crypto/: mod.rs
pillar-01-iron/vantis-core-io/src/fs/: mod.rs
pillar-01-iron/vantis-core-io/tests/: core_test.rs  integration_test.rs
pillar-01-iron/vantis-pqc/: Cargo.toml  README.md  todo.md
pillar-01-iron/vantis-pqc/benches/: pqc_benchmark.rs
pillar-01-iron/vantis-pqc/bindings/kotlin/: VantisPQC.kt
pillar-01-iron/vantis-pqc/bindings/swift/: VantisPQC.swift
pillar-01-iron/vantis-pqc/docs/: INTEGRATION_GUIDE.md  MIGRATION_GUIDE.md  SECURITY_AUDIT.md
pillar-01-iron/vantis-pqc/include/: vantis_pqc.h
pillar-01-iron/vantis-pqc/src/: dilithium.rs  error.rs  ffi.rs  hsm.rs  hybrid.rs  kdf.rs  key_management.rs  kyber.rs  lib.rs  multi_party.rs  performance.rs  rotation.rs  secure_memory.rs  streaming.rs
pillar-01-iron/vantis-pqc/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
pillar-01-iron/vantis-pqc/tests/: integration_tests.rs  property_tests.proptest-regressions  property_tests.rs
pillar-01-iron/vantis-vault/: Cargo.toml  README.md
pillar-01-iron/vantis-vault/benches/: vault_benchmark.rs
pillar-01-iron/vantis-vault/src/: lib.rs
pillar-01-iron/vantis-vault/src/api/: mod.rs
pillar-01-iron/vantis-vault/src/crypto/: mod.rs  pqc_integration.rs
pillar-01-iron/vantis-vault/src/recovery/: mod.rs
pillar-01-iron/vantis-vault/src/tpm/: mod.rs
pillar-01-iron/vantis-vault/tests/: vault_test.rs
pillar-01-iron/wasm-sandbox/: Cargo.toml  README.md
pillar-01-iron/wasm-sandbox/benches/: wasm_benchmark.rs
pillar-01-iron/wasm-sandbox/src/: lib.rs
pillar-01-iron/wasm-sandbox/src/api/: mod.rs
pillar-01-iron/wasm-sandbox/src/plugins/: mod.rs
pillar-01-iron/wasm-sandbox/src/runtime/: mod.rs
pillar-01-iron/wasm-sandbox/src/security/: mod.rs
pillar-01-iron/wasm-sandbox/tests/: sandbox_test.rs
pillar-02-logic/vantis-canvas/: Cargo.toml  README.md
pillar-02-logic/vantis-canvas/benches/: canvas_benchmark.rs
pillar-02-logic/vantis-canvas/src/: lib.rs  main.rs
pillar-02-logic/vantis-canvas/src/animation/: mod.rs
pillar-02-logic/vantis-canvas/src/collaboration/: mod.rs
pillar-02-logic/vantis-canvas/src/core/: mod.rs
pillar-02-logic/vantis-canvas/src/export/: mod.rs
pillar-02-logic/vantis-canvas/src/gpu_rendering/: mod.rs
pillar-02-logic/vantis-canvas/tests/: canvas_tests.rs
pillar-02-logic/vantis-grid/: Cargo.toml  README.md
pillar-02-logic/vantis-grid/benches/: grid_benchmark.rs
pillar-02-logic/vantis-grid/src/: lib.rs  main.rs
pillar-02-logic/vantis-grid/src/core/: mod.rs
pillar-02-logic/vantis-grid/tests/: integration_test.rs
pillar-02-logic/vantis-lens/: Cargo.toml  README.md
pillar-02-logic/vantis-lens/benches/: lens_benchmark.rs
pillar-02-logic/vantis-lens/src/: lib.rs  main.rs
pillar-02-logic/vantis-lens/tests/: lens_test.rs
pillar-02-logic/vantis-writer/: Cargo.toml  README.md
pillar-02-logic/vantis-writer/benches/: writer_benchmark.rs
pillar-02-logic/vantis-writer/src/: lib.rs
pillar-02-logic/vantis-writer/tests/: writer_test.rs
pillar-03-sync/vantis-chronos/: Cargo.toml  README.md
pillar-03-sync/vantis-chronos/benches/: chronos_benchmark.rs
pillar-03-sync/vantis-chronos/src/: lib.rs  main.rs
pillar-03-sync/vantis-chronos/tests/: chronos_test.rs  chronos_unit_tests.rs
pillar-03-sync/vantis-flow/: Cargo.toml  README.md
pillar-03-sync/vantis-flow/benches/: flow_benchmark.rs
pillar-03-sync/vantis-flow/src/: lib.rs
pillar-03-sync/vantis-flow/tests/: flow_test.rs
pillar-03-sync/vantis-link/: Cargo.toml  README.md
pillar-03-sync/vantis-link/benches/: link_benchmark.rs
pillar-03-sync/vantis-link/src/: lib.rs  main.rs
pillar-03-sync/vantis-link/tests/: link_test.rs
pillar-04-continuity/vantis-ark/: Cargo.toml  README.md
pillar-04-continuity/vantis-ark/benches/: ark_benchmark.rs
pillar-04-continuity/vantis-ark/src/: lib.rs  main.rs
pillar-04-continuity/vantis-ark/tests/: ark_test.rs
pillar-04-continuity/vantis-bridge/: Cargo.toml  README.md
pillar-04-continuity/vantis-bridge/benches/: bridge_benchmark.rs
pillar-04-continuity/vantis-bridge/src/: lib.rs  main.rs
pillar-04-continuity/vantis-bridge/tests/: bridge_test.rs
pillar-04-continuity/vantis-mobile/: Cargo.toml  PHASES_COMPLETED.md  README.md  build-android.sh  build-ios.sh
pillar-04-continuity/vantis-mobile/benches/: mobile_benchmark.rs
pillar-04-continuity/vantis-mobile/src/: crypto.rs  error.rs  ffi.rs  lib.rs  main.rs  models.rs  offline_sync.rs  protocol.rs
pillar-04-continuity/vantis-mobile/tests/: mobile_test.rs
tests-comprehensive/: Cargo.toml
tests-comprehensive/src/: lib.rs  tests.rs
(+1198 files in other folders)
