[package]
name = "vantis-office-tests"
version.workspace = true
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"

[dev-dependencies]
criterion = "0.5"
