[package]
name = "vantis-core-io"
version.workspace = true
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
tokio = { version = "1.35", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha3 = "0.10"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "core_benchmark"
harness = false