[package]
name = "vantis-pqc"
version = "0.1.0"
edition = "2021"
authors = ["Vantis Corporation"]
license = "Proprietary"
repository = "https://github.com/vantisCorp/VantisOffice"
description = "Post-quantum cryptography implementation for VantisOffice"

[lib]
name = "vantis_pqc"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core dependencies
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Post-quantum cryptography libraries
pqcrypto-kyber = { version = "0.8", features = ["serialization"] }
pqcrypto-traits = "0.3"

# FFI dependencies
libc = "0.2"

# Utilities
rand = "0.8"
zeroize = { version = "1.5", features = ["derive"] }
hex = "0.4"

# KDF dependencies
sha2 = "0.10"
blake3 = "1.5"
pbkdf2 = { version = "0.12", features = ["simple"] }
argon2 = "0.5"

# Performance
num_cpus = "1.16"

# Dilithium signatures
pqcrypto-dilithium = { version = "0.5", features = ["serialization"] }

[dev-dependencies]
criterion = "0.5"

# [[bench]]
# name = "pqc_bench"
# harness = false