[package]
name = "vantis-pqc"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
description = "Post-Quantum Cryptography module for VantisOffice"

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chacha20poly1305.workspace = true

# PQC dependencies
# Note: Using placeholder implementations for now
# In production, use actual PQC libraries
# kyber = { version = "0.1", package = "pqc_kyber" }
# pqcrypto-dilithium = { version = "0.5" }
# pqcrypto-traits = { version = "0.3" }

# Additional crypto
sha3 = "0.10"
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }
bincode = "1.3"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "pqc_benchmark"
harness = false

[features]
default = ["kyber90s"]
kyber90s = []