[package]
name = "vantis-vault"
version.workspace = true
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.35", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
openssl = "0.10"

# Post-quantum cryptography
vantis-pqc = { path = "../vantis-pqc" }

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "vault_benchmark"
harness = false