[package]
name = "wasm-sandbox"
version.workspace = true
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.35", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
wasmtime = "24.0"
wasmtime-wasi = "42.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "wasm_benchmark"
harness = false