[package]
name = "vantis-canvas"
version.workspace = true
edition = "2021"
authors = ["Vantis Team"]
description = "3D-accelerated presentation application for VantisOffice"
license = "Proprietary"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Cross-pillar integration: Pillar 01 (Iron) -> Pillar 02 (Logic)
flux-vector-engine = { path = "../../pillar-01-iron/flux-vector-engine" }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[[bench]]
name = "canvas_benchmark"
harness = false

[[bin]]
name = "vantis-canvas"
path = "src/main.rs"

[lib]
name = "vantis_canvas"
path = "src/lib.rs"