[package]
name = "vantis-grid"
version.workspace = true
edition = "2021"
authors = ["Vantis Team"]
description = "AI-powered spreadsheet application for VantisOffice"
license = "Proprietary"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1.10"
thiserror = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Math and ML (for Neural Engine)
# Note: Using simpler math libraries to avoid dependency conflicts
nalgebra = "0.34"
statrs = "0.16"

# Data processing - simplified to avoid conflicts
# polars and arrow removed due to dependency conflicts
# Will implement basic data processing natively

# Cryptography (for secure collaboration)
# Replaced rust-crypto (deprecated) with RustCrypto
sha2 = "0.10"
aes = "0.8"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[[bin]]
name = "vantis-grid"
path = "src/main.rs"

[lib]
name = "vantis_grid"
path = "src/lib.rs"

[[bench]]
name = "grid_benchmark"
harness = false
