[package]
name = "vantis-grid"
version.workspace = true
edition = "2021"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1.10"
thiserror = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Math and ML (for Neural Engine)
nalgebra = "0.32"
statrs = "0.18"

# Cryptography (for secure collaboration)
sha2 = "0.10"
aes = "0.8"
rand = "0.8"

# Cross-pillar integration: Pillar 01 (Iron) -> Pillar 02 (Logic)
vantis-pqc = { path = "../../pillar-01-iron/vantis-pqc" }

# Cross-pillar integration: Pillar 02 (Logic) <-> Pillar 03 (Sync)
vantis-link = { path = "../../pillar-03-sync/vantis-link" }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[[bin]]
name = "vantis-grid"
path = "src/main.rs"

[lib]
name = "vantis_grid"
path = "src/lib.rs"

[[bench]]
name = "grid_benchmark"
harness = false