[package]
name = "vantis-lens"
version.workspace = true
edition = "2021"
authors = ["Vantis Team"]
description = "Secure PDF viewer with automatic sterilization for VantisOffice"
license = "Proprietary"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# PDF processing (placeholder - would use poppler or pdfium in production)
# poppler = "0.3"
# pdfium = "0.1"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[[bench]]
name = "lens_benchmark"
harness = false

[[bin]]
name = "vantis-lens"
path = "src/main.rs"

[lib]
name = "vantis_lens"
path = "src/lib.rs"