[package]
name = "vantis-writer"
version.workspace = true
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.35", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
pulldown-cmark = "0.13"

# Cross-pillar integration: Pillar 01 (Iron) -> Pillar 02 (Logic)
vantis-vault = { path = "../../pillar-01-iron/vantis-vault" }

# Cross-pillar integration: Pillar 02 (Logic) <-> Pillar 03 (Sync)
vantis-link = { path = "../../pillar-03-sync/vantis-link" }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "writer_benchmark"
harness = false