[package]
name = "vantis-chronos"
version.workspace = true
edition = "2021"
authors = ["Vantis Corporation"]
license = "Proprietary"
repository = "https://github.com/vantisCorp/VantisOffice"
description = "Privacy-first calendar with PGP encryption for VantisOffice"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
base64 = "0.22"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "chronos_benchmark"
harness = false
