[package]
name = "vantis-flow"
version.workspace = true
edition = "2021"
authors = ["Vantis Team"]
description = "Planning and diagrams module for VantisOffice"
license = "Proprietary"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "flow_benchmark"
harness = false
