[package]
name = "vantis-bridge"
version.workspace = true
edition = "2021"
authors = ["Vantis Corporation"]
license = "Proprietary"
repository = "https://github.com/vantisCorp/VantisOffice"
description = "Legacy format converter with security controls for VantisOffice"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "bridge_benchmark"
harness = false