[package]
name = "vantis-mobile"
version = "0.1.0"
edition = "2021"

[lib]
name = "vantis_mobile"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.35", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Cryptography
chacha20poly1305 = "0.10"
x25519-dalek = "2.0"
sha2 = "0.10"
rand = "0.8"

# Networking
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = "0.21"

# FFI
cbindgen = "0.24"