[package]
name = "vantis-mobile"
version.workspace = true
edition = "2021"
rust-version = "1.70"
authors = ["VantisCorp"]
description = "Mobile companion app backend for VantisOffice"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vantisCorp/VantisOffice"
keywords = ["mobile", "tunnel", "encryption", "sync"]
categories = ["api-bindings", "cryptography", "network-programming"]

[lib]
name = "vantis_mobile"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"

# Cryptography
ring = "0.17"
chacha20poly1305 = "0.10"
base64 = "0.21"
hex = "0.4"

# Async runtime
futures = "0.3"
futures-util = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[features]
default = ["openssl-vendored"]
openssl-vendored = ["tokio-tungstenite/native-tls-vendored"]